--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@ gems:
   - jekyll-paginate
 
 # Site settings
-title: "Mediator"
+title: "Vivek Thampi Blog"
 description: > # this means to ignore newlines until "email:"
-   A Jekyll theme - Medium inspired
+   PhD Student in Applied Mathematics, University of Waterloo
 
-email: a-mail@mail.mail
+email: vivekthampiis@gmail.com
 #blog logo
 logo: "/assets/images/df_logo.jpg"
 float_logo: true # true, false (default)
@@ -16,16 +16,16 @@ float_logo: true # true, false (default)
 # blog cover
 cover: "/assets/images/cA4aKEIPQrerBnp1yGHv_IMG_9534-3-2.jpg"
 
-name: 'Dirk Fabisch'
-author: 'Dirk Fabisch'
+name: 'Vivek Thampi'
+author: 'Vivek Thampi'
 author_image: "/assets/images/author.jpg"
 
 paginate:	5
 
-url: "http://myblog.***.***" # the base hostname & protocol for your site
-baseurl: ""
+url: "http://vivekthampi.ca" # the base hostname & protocol for your site
+baseurl: "vivekthampi.ca"
 #used to display twitter cards
-twitter_handle: '@dirkfabisch'
+#twitter_handle: '@dirkfabisch'
 
 #fill in disqus shortname to use disqus
 #disqus: disqus-shortname
@@ -35,9 +35,9 @@ twitter_handle: '@dirkfabisch'
 # social icons and sharing options
 social:
   - icon:	twitter
-    url:	https://twitter.com/dirkfabisch
+    url:	https://twitter.com/rikuvivek
     desc: Follow me on twitter
-    share_url: http://twitter.com/share
+    share_url: http://twitter.com/rikuvivek
     share_title: ?text=
     share_link: "&amp;url="
 
