--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ author_image: "/assets/images/author.jpg"
 paginate:	5
 
 url: "http://vivekthampi.ca" # the base hostname & protocol for your site
-baseurl: "vivekthampi.ca"
+baseurl: ""
 #used to display twitter cards
 #twitter_handle: '@dirkfabisch'
 
