--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: > # this means to ignore newlines until "email:"
 
 email: vivekthampiis@gmail.com
 #blog logo
-logo: "/assets/images/vt_logo.jpg"
+logo: "/assets/images/vt_logo.png"
 float_logo: true # true, false (default)
 
 # blog cover
