--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ logo: "/assets/images/vt_logo.png"
 float_logo: true # true, false (default)
 
 # blog cover
-cover: "/assets/images/cA4aKEIPQrerBnp1yGHv_IMG_9534-3-2.jpg"
+cover: "/assets/images/background.jpg"
 
 name: 'Vivek Thampi'
 author: 'Vivek Thampi'
@@ -49,8 +49,8 @@ social:
 #    share_link: "&amp;u="
 
   - icon:	github
-    url:	https://github.com/dirkfabisch
-    desc:	Fork me on github
+    url:	https://github.com/vthampi
+    desc:	Follow me on Github
     share_url:
     share_title:
     share_link:
